Fixed overflow/nowrap for button

--- a/main.css
+++ b/main.css
@@ -61,3 +61,8 @@ h3 {
 body {
     background: #333;
 }
+
+span {
+    white-space: nowrap;
+    overflow: hidden; 
+}
